# confsinfo

./: .gitignore  .travis.yml  Dockerrun.aws.json  LICENSE  README.md  circle.yml  elm-package.json  elm.min.js  index.html  style.css  test.js  test.min.js
.deploy/: Dockerrun.aws.json
.deploy/.ebextensions/: ssl_rewrite.conf
backend/: .gitignore  Dockerfile  confsinfo-backend.cabal  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  stack.yaml
backend/app/: Main.hs  Util.hs
backend/app/models/: Audience.hs  Conference.hs  InitialModel.hs  Language.hs  Location.hs  Topic.hs
backend/config/: config.env
backend/db/: AddConference.hs  RunAll.hs  RunMigrations.hs
backend/db/migrations/: 20170208_add_conferences_table.sql  20170312_add_tag_tables.sql
backend/test/: AudienceSpec.hs  ConferenceSpec.hs  InitialModelSpec.hs  LanguageSpec.hs  LocationSpec.hs  Spec.hs  TopicSpec.hs
frontend/: elm-package.json
frontend/src/: Conference.elm  DaTuple.elm  DateFormatter.elm  FilteredTag.elm  FilteredTagSection.elm  InitialData.elm  Main.elm  (+3 more)
src/: Conference.elm  ConferenceInternal.elm  Conferences.elm  DaTuple.elm  DateFormatter.elm  FilteredTag.elm  FilteredTagInternal.elm  FilteredTagSection.elm  FilteredTagSectionInternal.elm  FilteredTagWithName.elm  InitialData.elm  Main.elm  Model.elm  ModelInternal.elm  Tag.elm
test/: AllTests.elm  ConferenceTest.elm  ConferencesTest.elm  DaTupleTest.elm  DateFormatterTest.elm  FilteredTagSectionTest.elm  FilteredTagTest.elm  ModelTest.elm  TestHelpers.elm  elm-package.json  gulpfile.js  package.json
(+16 files in other folders)
